--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "mocha": "^6.2.0",
