--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
   "keywords": [],
+  "engines": {
+    "node": "12.8.1"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,12 +22,16 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
+    "knex": "^0.19.4",
     "morgan": "^1.9.1",
+    "pg": "^7.12.1",
+    "postgrator": "^3.10.2",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
-    "mocha": "^6.2.0",
     "chai": "^4.2.0",
-    "nodemon": "^1.19.1"
+    "mocha": "^6.2.0",
+    "nodemon": "^1.19.1",
+    "postgrator-cli": "^3.3.0"
   }
 }
