GET request tests not working

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require test/setup.js",
+    "test": "mocha --require test/setup.js --timeout 5000",
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "start": "node src/server.js",
