--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "mocha --require test/setup.js --timeout 5000",
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
+    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
     "start": "node src/server.js",
-    "predeploy": "npm audit",
+    "predeploy": "npm audit && npm run migrate:production",
     "deploy": "git push heroku master"
   },
   "keywords": [],
@@ -22,7 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "helmet": "^3.20.0",
+    "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.4",
     "morgan": "^1.9.1",
