--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "postgrator": "^3.10.2",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
